# tds

./: .gitignore  README.md  default.nix  stack.yaml  tds.cabal
Database/: TDS.hs
Database/TDS/: Connection.hs  Internal.hs  Login.hs  Proto.hs  Query.hs  Types.hs
Database/TDS/Proto/: Errors.hs
src/: Test.hs
