name:                tds
version:             0.1.0.0
synopsis:            Pure Haskell TDS protocol implementation. Mainly for beam-mssql and beam-sybase
-- description:
homepage:            https://github.com/tathougies/beam-tds#readme
license:             MIT
license-file:        LICENSE
author:              Travis Athougies
maintainer:          travis@athougies.net
copyright:           Copyright (C) 2018 Travis Athougies
category:            Database
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Database.TDS
                       Database.TDS.Types
                       Database.TDS.Connection
                       Database.TDS.Login
                       Database.TDS.Query

                       Database.TDS.Proto
                       Database.TDS.Proto.Errors

  build-depends:       base       >= 4.7 && < 5,
                       bytestring >=0.10 && <0.11,
                       mtl        >=2.2  && <2.3,
                       text       >=1.2  && <1.3,
                       stm,
                       transformers >=0.5 && <0.6,
                       network,
                       tardis     >=0.4  && <0.5,
                       unix,
                       streaming,
                       streaming-attoparsec,
                       streaming-bytestring,
                       attoparsec,
                       attoparsec-binary,
                       hostname,
                       vector
  default-language:    Haskell2010
  ghc-options:         -O2

executable test
  build-depends:       base >=4.7 && <5,
                       tds ==0.1.0.0
  hs-source-dirs:      src
  main-is:             Test.hs
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall
  if flag(werror)
    ghc-options:       -Werror

source-repository head
  type:     git
  location: https://github.com/tathougies/tds

flag werror
  description: Enable -Werror during development
  default:     False
  manual:      True